# UTF-test

./: .env_template  README.md  pyproject.toml
src/api/: serializers.py  tests.py  urls.py  views.py
src/api/fixtures/: test_fixtures.json
src/config/: settings.py  urls.py
src/foods/: admin.py  models.py  urls.py  views.py
src/foods/management/commands/: populate_food_categories.py  populate_foods.py
src/foods/migrations/: 0001_initial.py
src/templates/foods/: base.html  categories.html  foods.html
